// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding LocationFinder component should pass additional props to Slide component 1`] = `
Array [
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        forceInset={
          Object {
            "bottom": "always",
          }
        }
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Let's select your local campus
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll use your location to connect you with your nearby campus and community
          </Text>
        </View>
        <View
          horizontal={false}
          style={
            Object {
              "paddingHorizontal": 0,
              "paddingVertical": 16,
            }
          }
        >
          <View
            bordered={false}
            disabled={false}
            pill={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#00676D",
                "borderColor": "#00676D",
                "borderRadius": 16,
                "borderWidth": 2,
                "elevation": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Yes, find my local campus
            </Text>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </RCTScrollView>,
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
          "top": "never",
        }
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "#A5A5A5",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
      >
        Later
      </Text>
    </RCTSafeAreaView>
  </View>,
]
`;

exports[`The Onboarding LocationFinder component should render 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Let's select your local campus
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          We'll use your location to connect you with your nearby campus and community
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 16,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Yes, find my local campus
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding LocationFinder component should render a BackgroundComponent 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/640/640/?random",
              "url": "https://picsum.photos/640/640/?random",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      />
    </View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Let's select your local campus
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          We'll use your location to connect you with your nearby campus and community
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 16,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Yes, find my local campus
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding LocationFinder component should render a button with custom text 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Let's select your local campus
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          We'll use your location to connect you with your nearby campus and community
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            bordered={false}
            disabled={false}
            pill={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#00676D",
                "borderColor": "#00676D",
                "borderRadius": 16,
                "borderWidth": 2,
                "elevation": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Custom button text
            </Text>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding LocationFinder component should render a custom description 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Let's select your local campus
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Custom description text
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 16,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Yes, find my local campus
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding LocationFinder component should render a custom title 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Custom title text
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          We'll use your location to connect you with your nearby campus and community
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 16,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            Yes, find my local campus
          </Text>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;

exports[`The Onboarding LocationFinder component should render the campus card 1`] = `
Array [
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        forceInset={
          Object {
            "bottom": "always",
          }
        }
        style={
          Object {
            "flex": 1,
            "justifyContent": "space-between",
            "marginBottom": 48,
            "paddingHorizontal": 16,
            "paddingTop": 16,
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "paddingBottom": 8,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#00676D",
                  "fontFamily": "InterUI-Black",
                  "fontSize": 36,
                  "lineHeight": 41.4,
                }
              }
            >
              Let's select your local campus
            </Text>
          </View>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            We'll use your location to connect you with your nearby campus and community
          </Text>
        </View>
        <View
          accessible={true}
          clickable={false}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            inHorizontalList={true}
            isLoading={false}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 16,
                "margin": 8,
                "marginBottom": 16,
                "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 8,
              }
            }
          >
            <View
              style={
                Object {
                  "borderRadius": 16,
                  "overflow": "hidden",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexWrap": "nowrap",
                    "height": 96,
                    "justifyContent": "space-between",
                  }
                }
              >
                <Image
                  fadeDuration={250}
                  onLoad={[Function]}
                  source={
                    Array [
                      Object {
                        "cache": "force-cache",
                        "uri": "https://picsum.photos/300/300/?random",
                      },
                    ]
                  }
                  style={
                    Object {
                      "aspectRatio": 1,
                      "backgroundColor": "#A5A5A5",
                      "height": "100%",
                      "resizeMode": "cover",
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "flex": 1,
                      "paddingHorizontal": 16,
                      "paddingVertical": 16,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "stretch",
                        "flexDirection": "row",
                        "flexWrap": "nowrap",
                        "height": 21,
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#303030",
                          "fontFamily": "InterUI-Medium",
                          "fontSize": 14,
                          "lineHeight": 21,
                        }
                      }
                    >
                      Chicago Campus
                    </Text>
                  </View>
                  <Text
                    style={
                      Object {
                        "color": "#505050",
                        "fontFamily": "InterUI-Bold",
                        "fontSize": 12,
                        "lineHeight": 18,
                      }
                    }
                  >
                    67 Algonquin Rd
South Barrington, IL 60010-6143
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </RCTScrollView>,
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
          "top": "never",
        }
      }
    >
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={true}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 48,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Next
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            height={20}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "marginLeft": 8,
                  "marginRight": -8,
                },
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGPath
                d="M9.65 21L8 20.1l7.72-8.1L8 3.9 9.65 3l8.16 8.54c.27.28.27.64 0 .92L9.67 21z"
                fill={
                  Array [
                    0,
                    4294967295,
                  ]
                }
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>,
]
`;

exports[`The Onboarding LocationFinder component should render with a button 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "minHeight": "100%",
    }
  }
  overScrollMode="auto"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      forceInset={
        Object {
          "bottom": "always",
        }
      }
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginBottom": 48,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "paddingBottom": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
              }
            }
          >
            Let's select your local campus
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#505050",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          We'll use your location to connect you with your nearby campus and community
        </Text>
      </View>
      <View
        horizontal={false}
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingVertical": 16,
          }
        }
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            bordered={false}
            disabled={false}
            pill={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#00676D",
                "borderColor": "#00676D",
                "borderRadius": 16,
                "borderWidth": 2,
                "elevation": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Yes, find my local campus
            </Text>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</RCTScrollView>
`;
